# CorundumEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  Vector2.cpp  Vector2.h  component.h  constants.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  game.cpp  game.h  main.cpp  ticks.cpp  ticks.h
src/components/: CMakeLists.txt  transform_component.cpp  transform_component.h
test/: CMakeLists.txt  tests.cpp
testing/: CMakeLists.txt  vector_tests.cpp
